borsh/tests/snapshots/test_binary_heaps__binary_heap_i8-3.snap
---
source: borsh/tests/test_binary_heaps.rs
expression: buf
---
[
    10,
    0,
    0,
    0,
    100,
    100,
    100,
    100,
    100,
    100,
    100,
    100,
    100,
    100,
]
