borsh/tests/snapshots/test_binary_heaps__binary_heap_string-2.snap
---
source: borsh/tests/test_binary_heaps.rs
expression: buf
---
[
    1,
    0,
    0,
    0,
    1,
    0,
    0,
    0,
    97,
]
