borsh/tests/snapshots/test_binary_heaps__binary_heap_string-3.snap
---
source: borsh/tests/test_binary_heaps.rs
expression: buf
---
[
    10,
    0,
    0,
    0,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
]
