borsh/tests/snapshots/test_binary_heaps__binary_heap_string-4.snap
---
source: borsh/tests/test_binary_heaps.rs
expression: buf
---
[
    100,
    0,
    0,
    0,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
    1,
    0,
    0,
    0,
    97,
]
