borsh/tests/snapshots/test_binary_heaps__binary_heap_u32-2.snap
---
source: borsh/tests/test_binary_heaps.rs
expression: buf
---
[
    1,
    0,
    0,
    0,
    0,
    202,
    154,
    59,
]
