borsh/tests/snapshots/test_binary_heaps__binary_heap_u32-4.snap
---
source: borsh/tests/test_binary_heaps.rs
expression: buf
---
[
    100,
    0,
    0,
    0,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
]
